# CrewAI

./: .dockerignore  .env.example  .gitignore  README.md  crew.jsonc  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  docker-publish.yml
agents/: backend_engineer.jsonc  data_and_system_analyst.jsonc  devops_engineer.jsonc  frontend_engineer.jsonc  github_release_specialist.jsonc  lead_software_engineer.jsonc  linkedin_content_creator.jsonc  mobile_app_developer.jsonc  senior_research_analyst.jsonc  technical_content_and_document.jsonc  ui_ux_designer.jsonc
apps/api/: Dockerfile  main.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: layout.jsx  page.jsx
apps/web/components/: AgentCard.jsx  ExecutionPanel.jsx  ModeToggle.jsx
apps/web/lib/: api.js
apps/web/styles/: tokens.css
tools/: github_tool.py  linkedin_tool.py
